# semgreptest

./: .gitignore  cursor_vuln.py  notes.org  pyproject.toml  requirements.txt  rule1.yaml  rule2.yaml  rule3.yaml  rule4.yaml  rule5.yaml  test1.py  test2.py  test3.py
