[tool.poetry]
name = "semgrep-test"
version = "0.0.0"
description = ""
authors = ["Bart Kastermans <bart.kastermans@kpn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
python-language-server = "^0.36.2"
click = "^8.1.7"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
